(Issue #3601) Fix clip display width on IE9

--- a/shared/oae/css/oae.components.css
+++ b/shared/oae/css/oae.components.css
@@ -703,10 +703,13 @@ div.oae-thumbnail i[class^="icon-"] {
     -webkit-border-radius: 6px;
        -moz-border-radius: 6px;
             border-radius: 6px;
+    /* Box sizing needed to workaround IE9 bug in calculating container size */
+       -moz-box-sizing: content-box;
+            box-sizing: content-box;
     display: block;
     font-size: 11px;
     line-height: 23px;
-    min-width: 70px;
+    min-width: 50px; /* doesn't include padding (see above) */
     padding: 10px;
     text-align: left;
     width: 100%;
